Dev (#8)
* refactor: quarkus, webflux, mvc
* refactor: get, set, constructor generating
* testcontainer
* log file disabled, crlf
* rest: sql v2 impl
* updates java, go versions,
updates dependencies,
adds mvn jooq implementation.
* java async profile (in docker)

---------

Co-authored-by: Bulgakov Alexander <aleksandr.bulgakov@raiffeisen.ru>