@@ -1,47 +1,64 @@
+import com.bmuschko.gradle.docker.DockerConventionJvmApplicationPlugin
+import com.bmuschko.gradle.docker.tasks.image.Dockerfile
+import org.gradle.kotlin.dsl.named
+
 plugins {
     `java-library`
-    id("org.springframework.boot") version "3.2.1"
+    id("org.springframework.boot")
+    id("io.spring.dependency-management")
+    id("docker-conventions")
+//    id("org.graalvm.buildtools.native") version "0.10.6"
 }
 
-repositories {
-    maven("https://plugins.gradle.org/m2/")
+//repositories {
+//    maven("https://plugins.gradle.org/m2/")
+//}
+
+dependencyManagement {
+    imports {
+//        project.logger.warn("BOM_COORDINATES: " + org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
+        mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
+    }
 }
 
 dependencies {
     api(project(":rest:java:storage:model"))
-//    api(project(":rest:kotlin:storage"))
     api(project(":rest:java:storage:spring-data"))
     api(project(":rest:java:storage:querydsl-sql-jdbc"))
     api(project(":rest:java:storage:jdbc"))
+    api(project(":rest:java:storage:jooq"))
+    api(project(":rest:java:async-profile-rest-api"))
 
-    api("org.hibernate:hibernate-core:6.4.1.Final")
-    api("com.zaxxer:HikariCP:5.1.0")
-    api("org.postgresql:postgresql:42.7.1")
+    implementation("org.jooq:jooq")
+    implementation("org.hibernate:hibernate-core")
+    implementation("com.zaxxer:HikariCP")
+    implementation("org.postgresql:postgresql")
 
-    annotationProcessor("org.projectlombok:lombok:1.18.30")
-    implementation("org.projectlombok:lombok:1.18.30")
-    testAnnotationProcessor("org.projectlombok:lombok:1.18.30")
-    implementation("org.springframework.boot:spring-boot-starter-web:3.2.1")
-    implementation("org.springframework.data:spring-data-jpa:3.2.1")
-//    implementation("org.springdoc:springdoc-openapi-ui:2.3.0")
-    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0")
+    implementation("org.liquibase:liquibase-core")
 
-    implementation("jakarta.persistence:jakarta.persistence-api:3.1.0")
-
-    implementation("org.liquibase:liquibase-core:4.25.1")
+    annotationProcessor("org.projectlombok:lombok")
+    implementation("org.projectlombok:lombok")
+    testAnnotationProcessor("org.projectlombok:lombok")
+    implementation("org.springframework.boot:spring-boot-persistence")
+    implementation("org.springframework.boot:spring-boot-starter-jdbc")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-jooq")
+//    implementation("org.springframework.boot:spring-boot-starter-graphql")
+//    implementation("com.tailrocks.graphql:graphql-datetime-spring-boot-starter")
+    implementation("org.springframework.data:spring-data-jpa")
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui")
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
+    sourceCompatibility = JavaVersion.VERSION_25
+    targetCompatibility = JavaVersion.VERSION_25
 }
 
 tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
-//    options.compilerArgs.addAll(
-//        listOf(
-//            "-parameters",
-//            "--enable-preview",
-//        )
-//    )
+}
+
+tasks.named<Dockerfile>(DockerConventionJvmApplicationPlugin.DOCKERFILE_TASK_NAME) {
+    exposePort(8080, 8080)
 }
